adds cylindrical head to phantom, doesnt scale yet with patientsize, uses skin map version to distinguish head and headless skindose calculation pickle files that may already be present refs #810

--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -345,13 +345,23 @@
             been validated. Contributions are welcome, see <a href="http://bitbucket.org/openskin/openskin">openSkin website</a> for details. Create
             <a href="{% url 'rfopenskin' pk=generalstudymoduleattr.id %}">openSkin export</a>. (Not available if you don't have export permissions.)</div>
 
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapColourScaleObject.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapObject.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dObject.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dPersonObject.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dHUDObject.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapping.js"></script>
-            <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapping3d.js"></script>
+            {% if admin.phantomhead %}
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMapColourScaleObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMapObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMap3dObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMap3dPersonObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMap3dHUDObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMapping.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps2/rfSkinDoseMapping3d.js"></script>
+            {% else %}
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapColourScaleObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dPersonObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMap3dHUDObject.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapping.js"></script>
+                <script src="{{ STATIC_URL }}js/skin-dose-maps/rfSkinDoseMapping3d.js"></script>
+            {% endif %}
 
             <script>
                 if (isCanvasSupported()) {
