--- a/openrem/remapp/templates/remapp/notpatientindicatorsid_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/notpatientindicatorsid_confirm_delete.html
@@ -2,8 +2,10 @@
 
 {% block navhelp %}
         <li>
-{#            <a href="https://docs.openrem.org/en/{{ admin.docsversion }}/i_not_patient_indicator.html" target="_blank" data-toggle="tooltip" title="Not-patient indicators documentation - opens in a new tab">#}
-            <a href="https://docs.openrem.org/en/issue510notpatientindb/i_not_patient_indicator.html" target="_blank" data-toggle="tooltip" title="Not-patient indicators documentation - opens in a new tab">
+            <a
+                href="https://docs.openrem.org/en/{{ admin.docsversion }}/i_not_patient_indicator.html"
+                target="_blank" rel="noopener noreferrer"
+                data-toggle="tooltip" title="Not-patient indicators documentation - opens in a new tab">
                 Not-patient indicator documentation
             </a>
         </li>
