Simple Altair-based chart working for mean or median DLP per requested procedure name. No histograms at the moment, and the chart formatting isn't great. However, the chart creation and display works. References issue #830 and issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -231,6 +231,12 @@
 
         <!-- End of include JavaScript to enable highcharts plots -->
 
+        <!-- JavaScript to enable Altair charts -->
+        <script src="https://cdn.jsdelivr.net/npm/vega@5.9.0"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.0.2"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.2.1"></script>
+        <!-- End of JavaScript to enable Altair charts -->
+
         <!-- JavaScript to enable bootstrap tooltips -->
         <script>
             $(document).ready(function(){
