Removed HighCharts-related JavaScript. Added tooltip, legend title, y-axis title. I've tried to make the chart fit the DIV, but cannot work out how to do that at the moment. References issue #830 and issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -201,53 +201,15 @@
     {% if request.user.userprofile.plotCharts %}
 
         <script src="{{ STATIC_URL }}js/django_reverse/reverse.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartFullScreen.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartSetExportSize.js"></script>
         <script src="{{ STATIC_URL }}js/chroma.min.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartUpdateData.js"></script>
 
         <div class="ajax-progress"><img src="{{ STATIC_URL }}img/ajax-loader.gif"></div>
-
-        <!-- Include JavaScript to enable highcharts plots -->
-        <script src="{{ STATIC_URL }}js/charts/highcharts.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/boost.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/exporting.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/offline-exporting.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/export-csv.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/drilldown.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartSortingRoutines.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartHistogramNormalise.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartAverageAndHistogram.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartAverageOverTime.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartFrequency.js"></script>
-        <script src="{{ STATIC_URL }}js/charts/chartWorkload.js"></script>
-        <script>
-            var chartSorting = '{{ request.user.userprofile.plotCTInitialSortingChoice }}';
-            var chartSortingDirection = {{ request.user.userprofile.plotInitialSortingDirection }};
-
-            var def_title, norm_btn_class, instr_class, render_div, val_label, val_units, avg_label, cat_label, cat_counter,
-                    field_name_min, field_name_max, field_multiplier, field_cat_name, tooltip_filters, href_start, result, hide_series_btn_stub;
-        </script>
-
-        <!-- End of include JavaScript to enable highcharts plots -->
 
         <!-- JavaScript to enable Altair charts -->
         <script src="https://cdn.jsdelivr.net/npm/vega@5.9.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.0.2"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.2.1"></script>
         <!-- End of JavaScript to enable Altair charts -->
-
-        <!-- JavaScript to enable bootstrap tooltips -->
-        <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-            });
-        </script>
-        <!-- End of JavaScript to enable bootstrap tooltips -->
-
-        <!-- JavaScript function to sort a list of objects by the 'y' or 'name' object. -->
-        <script src="{{ STATIC_URL }}js/charts/sorting.js"></script>
-        <!-- End of JavaScript function to sort a list of objects by the 'y' or 'name' object -->
 
         <!-- JavaScript chart AJAX code. -->
         <script src="{{ STATIC_URL }}js/charts/ctChartAjax.js"></script>
@@ -830,7 +792,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion7" href="#collapseRequestMeanDLP" onclick="setTimeout(function() {fitChartToDiv('histogramRequestPlotDIV');}, 0);">
+                            <a data-toggle="collapse" data-parent="#accordion7" href="#collapseRequestMeanDLP">
                                 {% if request.user.userprofile.plotAverageChoice == 'mean' %}
                                     Plot of mean DLP for each requested procedure type.
                                 {% elif request.user.userprofile.plotAverageChoice == 'median' %}
@@ -843,40 +805,7 @@
                     </div>
                     <div id="collapseRequestMeanDLP" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <div id="histogramRequestPlotDIV" style="height: auto; margin: 0 0"></div>
-
-                            <div class="req-instructions">
-                                <table style="border:none">
-                                    <tr>
-                                        <th colspan="3" style="padding: 0px; padding-right: 10px; vertical-align: top">Sorting options</th>
-                                        <td rowspan="3" style="padding-left: 20px">
-                                            {% if request.user.userprofile.plotHistograms %}
-                                            Click on an individual column to show a histogram of data for that requested exam type.<br>
-                                            Click on a histogram bin tooltip to see the studies that contain the acquisitions in the bin. Note that
-                                            this will include acquisitions at the upper bin boundary, so in some cases may display more data than
-                                            shown in the histogram bin.
-                                            {% endif %}
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="padding: 0px; padding-right: 10px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'avgValue', 1, 0, 0)" class="sorting-option" data-toggle="tooltip" title="Sort by ascending DLP">&uarr;DLP</a></td>
-                                        <td style="padding: 0px; padding-right: 10px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'totalCounts', 1, 0, 0)" class="sorting-option" data-toggle="tooltip" title="Sort by ascending frequency">&uarr;frequency</a></td>
-                                        <td style="padding: 0px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'name', 1, 0, 0)" class="sorting-option" data-toggle="tooltip" title="Sort alphabetically">A&nbsp;to&nbsp;Z</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td style="padding: 0px; padding-right: 10px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'avgValue', -1, 0)" class="sorting-option" data-toggle="tooltip" title="Sort by descending DLP">&darr;DLP</a></td>
-                                        <td style="padding: 0px; padding-right: 10px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'totalCounts', -1, 0)" class="sorting-option" data-toggle="tooltip" title="Sort by descending frequency">&darr;frequency</a></td>
-                                        <td style="padding: 0px; vertical-align: top"><a onclick="anySeriesSort('#histogramRequestPlotDIV', 'name', -1, 0)" class="sorting-option" data-toggle="tooltip" title="Sort reverse alphabetically">Z&nbsp;to&nbsp;A</a></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <a onclick="$('#histogramRequestPlotDIV').highcharts().viewData(false, false, true); enterFullScreen('collapseRequestMeanDLP', 'histogramRequestPlotDIV'); $('#toggle_req_data_btn').toggle();" class="btn btn-default btn-sm" role="button">Toggle fullscreen</a>
-                            <a onclick="$('#histogramRequestPlotDIV').highcharts().viewData(true, true);" class="btn btn-default btn-sm" role="button" id="toggle_req_data_btn">Toggle data table</a>
-                            <a onclick="$('#histogramRequestPlotDIV').highcharts().zoomOut();" class="btn btn-default btn-sm" role="button">Reset zoom</a>
-                            <a onclick="hideOrShowAllSeries('histogramRequestPlotDIV', 'hide', 'req_dlp_series_')" class="btn btn-default btn-sm" role="button" id="req_dlp_series_hide">Hide all series</a>
-                            <a onclick="hideOrShowAllSeries('histogramRequestPlotDIV', 'show', 'req_dlp_series_')" class="btn btn-default btn-sm" role="button" id="req_dlp_series_show">Show all series</a>
-                            <a onclick="toggleAllSeries('histogramRequestPlotDIV')" class="btn btn-default btn-sm" role="button" id="req_dlp_series_toggle">Toggle all series</a>
-                            <div class="req-hist-norm-btn"><a onclick="normaliseHistograms('#histogramRequestPlotDIV'); $('#histogramRequestPlotDIV').highcharts().viewData(false, true);" class="btn btn-default btn-sm" role="button">Toggle normalised histograms</a></div>
+                            <div id="histogramRequestPlotDIV"></div>
                         </div>
                     </div>
                 </div>
@@ -884,41 +813,7 @@
             <!-- End of HTML to include div container for request plot -->
 
             <script>
-                $('#req_dlp_series_show').hide();
-
                 var plotCTRequestMeanDLP = true;
-                $(window).resize(function() {
-                    chartSetExportSize('histogramRequestPlotDIV');
-                    fitChartToDiv('histogramRequestPlotDIV');
-                });
-
-                norm_btn_class = '.req-hist-norm-btn';
-                instr_class = '.req-instructions';
-                render_div = 'histogramRequestPlotDIV';
-                val_label = 'DLP';
-                val_units = 'mGy.cm';
-                cat_label = 'Requested procedure';
-                cat_counter = 'studies';
-                field_name_min = 'study_dlp_min';
-                field_name_max = 'study_dlp_max';
-                field_multiplier = 1.0;
-                field_cat_name = 'requested_procedure';
-                tooltip_filters = tooltipFiltersRequest;
-                href_start = '{% url 'ct_summary_list_filter' %}?requesthist=1&';
-                hide_series_btn_stub = 'req_dlp_series_';
-
-            {% if request.user.userprofile.plotAverageChoice == 'both' %}
-                avg_label = 'Mean and median';
-            {% elif request.user.userprofile.plotAverageChoice == 'mean' %}
-                avg_label = 'Mean';
-            {% else %}
-                avg_label = 'Median';
-            {% endif %}
-
-                def_title = avg_label + ' ' + val_label + ' per ' + cat_label.toLowerCase();
-                result = chartAverageAndHistogram(def_title, norm_btn_class, instr_class, render_div, val_label,
-                        val_units, avg_label, cat_label, cat_counter, field_name_min, field_name_max, field_multiplier,
-                        field_cat_name, tooltip_filters, href_start, hide_series_btn_stub);
             </script>
         {% endif %}
 
