--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -787,6 +787,10 @@
         {% endif %}
 
         {% if request.user.userprofile.plotCTRequestMeanDLP %}
+            <script>
+                var plotCTRequestMeanDLP = true;
+            </script>
+
             <!-- HTML to include div container for request plot -->
             <div class="panel-group" id="accordion7">
                 <div class="panel panel-default">
@@ -794,11 +798,11 @@
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion7" href="#collapseRequestMeanDLP">
                                 {% if request.user.userprofile.plotAverageChoice == 'mean' %}
-                                    Plot of mean DLP for each requested procedure type.
+                                    Chart of mean DLP for each requested procedure name.
                                 {% elif request.user.userprofile.plotAverageChoice == 'median' %}
-                                    Plot of median DLP for each requested procedure type.
+                                    Chart of median DLP for each requested procedure name.
                                 {% else %}
-                                    Plot of mean and median DLP for each requested procedure type.
+                                    Chart of mean and median DLP for each requested procedure name.
                                 {% endif %}
                             </a>
                         </h4>
@@ -811,43 +815,31 @@
                 </div>
             </div>
             <!-- End of HTML to include div container for request plot -->
-
-            <script>
-                var plotCTRequestMeanDLP = true;
-            </script>
         {% endif %}
 
         {% if request.user.userprofile.plotCTRequestFreq %}
+            <script>
+                var plotCTRequestFreq = true;
+            </script>
+
             <!-- HTML to include div container for request pie chart -->
             <div class="panel-group" id="accordion8">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion8" href="#collapseRequestPieChart" onclick="setTimeout(function() {fitChartToDiv('piechartRequestDIV');}, 0);">
-                                Pie chart showing a breakdown of requested procedure type frequency.
+                            <a data-toggle="collapse" data-parent="#accordion8" href="#collapseRequestFreqChart">
+                                Chart of requested procedure name frequency.
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseRequestPieChart" class="panel-collapse collapse">
+                    <div id="collapseRequestFreqChart" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <div id="piechartRequestDIV" style="height: auto; margin: 0 0"></div>
-                            <a onclick="$('#piechartRequestDIV').highcharts().viewData(false, false, true); enterFullScreen('collapseRequestPieChart', 'piechartRequestDIV'); $('#toggle_req_freq_data_btn').toggle();" class="btn btn-default btn-sm" role="button">Toggle fullscreen</a>
-                            <a onclick="$('#piechartRequestDIV').highcharts().viewData(true, true);" class="btn btn-default btn-sm" role="button" id="toggle_req_freq_data_btn">Toggle data table</a>
+                            <div id="requestFreqChartDiv" style="height: auto; margin: 0 0"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End of HTML to include div container for request pie chart -->
-
-            <script>
-                var plotCTRequestFreq = true;
-                $(window).resize(function() {
-                    chartSetExportSize('piechartRequestDIV');
-                    fitChartToDiv('piechartRequestDIV');
-                });
-                var urlStartReq = '{% url 'ct_summary_list_filter' %}?{% for field in filter.form %}{% if field.name != 'requested_procedure' and field.name != 'o' and field.value %}&{{ field.name }}={{ field.value }}{% endif %}{% endfor %}&requested_procedure=';
-                result = chartFrequency('piechartRequestDIV', 'Requested procedure frequency');
-            </script>
         {% endif %}
 
         {% if request.user.userprofile.plotCTRequestNumEvents %}
