Added histograms for CT requested names. Further work required. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -447,6 +447,7 @@
                     <div id="collapseRequestAveDLP" class="panel-collapse collapse">
                         <div class="panel-body">
                             <div id="requestAverageDLPChartDiv"></div>
+                            <div id="requestHistogramDLPChartDiv"></div>
                         </div>
                     </div>
                 </div>
