--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -409,9 +409,9 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseRequestAveDLP" class="panel-collapse collapse">
+                    <div id="collapseRequestAveDLP" class="panel-collapse">
                         <div class="panel-body">
-                            <div id="requestAverageDLPChartDiv"></div>
+                            <div id="requestAverageDLPChartDiv" class="altair-chart-container"></div>
                         </div>
                     </div>
                 </div>
@@ -429,9 +429,9 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseRequestHistogramDLP" class="panel-collapse collapse">
+                        <div id="collapseRequestHistogramDLP" class="panel-collapse">
                             <div class="panel-body">
-                                <div id="requestHistogramDLPChartDiv"></div>
+                                <div id="requestHistogramDLPChartDiv" class="altair-chart-container"></div>
                             </div>
                         </div>
                     </div>
@@ -451,9 +451,9 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseRequestFreqChart" class="panel-collapse collapse">
+                    <div id="collapseRequestFreqChart" class="panel-collapse">
                         <div class="panel-body">
-                            <div id="requestFreqChartDiv"></div>
+                            <div id="requestFreqChartDiv" class="altair-chart-container"></div>
                         </div>
                     </div>
                 </div>
@@ -499,9 +499,9 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseStudyWorkload" class="panel-collapse collapse">
+                    <div id="collapseStudyWorkload" class="panel-collapse">
                         <div class="panel-body">
-                            <div id="studyWorkloadChartDiv"></div>
+                            <div id="studyWorkloadChartDiv" class="altair-chart-container"></div>
                         </div>
                     </div>
                 </div>
