Added a Plotly boxplot and bar chart if CT requested DLP chart is chosen. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -518,6 +518,12 @@
                         <div class="panel-body">
                             <div id="requestAverageDLPChartDiv"></div>
                         </div>
+                        <div class="panel-body">
+                            <div id="plotlyBoxplotTestingDiv"></div>
+                        </div>
+                        <div class="panel-body">
+                            <div id="plotlyBarchartTestingDiv"></div>
+                        </div>
                     </div>
                 </div>
             </div>
