--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -206,10 +206,14 @@
         <div class="ajax-progress"><img src="{{ STATIC_URL }}img/ajax-loader.gif"></div>
 
         <!-- JavaScript to enable Altair charts -->
-        <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+        <script src="{{ STATIC_URL }}js/charts/vega@5.js"></script>
+        <script src="{{ STATIC_URL }}js/charts/vega-lite@4.js"></script>
+        <script src="{{ STATIC_URL }}js/charts/vega-embed@6.js"></script>
         <!-- End of JavaScript to enable Altair charts -->
+
+        <!-- JavaScript to enable Plotly charts -->
+        <script src="{{ STATIC_URL }}js/charts/plotly-latest.min.js"></script>
+        <!-- End of JavaScript to enable Plotly charts -->
 
         <!-- JavaScript chart AJAX code. -->
         <script src="{{ STATIC_URL }}js/charts/ctChartAjax.js"></script>
