Adding Plotly histograms; just for CT requested procedure name at the moment. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -548,6 +548,9 @@
                             <div class="panel-body">
                                 <div id="requestHistogramDLPChartDiv"></div>
                             </div>
+                            <div class="panel-body">
+                                <div id="plotlyHistogramDLPChartDiv"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
